--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,8 +92,9 @@ nav a:focus { color: #fff; }
 
 .coming-soon .logo a {
 	display: inline-block;
-	width: 113px;
-	height: 110px;
+	width: 150px;
+	height: 150px;
+    margin-bottom: -40px;
 	background: url(../img/rethink.svg) center center no-repeat;
 	text-indent: -99999px;
 }
