--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,7 @@ nav a:focus { color: #fff; }
 	display: inline-block;
 	width: 150px;
 	height: 150px;
+    margin-top: -40px;
     margin-bottom: -40px;
 	background: url(../img/rethink.svg) center center no-repeat;
 	text-indent: -99999px;
