--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,21 +111,13 @@ nav a:focus { color: #fff; }
 
 .coming-soon .logo a {
 	display: inline-block;
-	width: 150px;
+	width: 450px;
 	height: 150px;
-    margin-top: -40px;
+	background: url(../img/banner.png) center no-repeat;
     margin-bottom: -40px;
-	background: url(../img/rethink.svg) center center no-repeat;
+    background-size: contain;
 	text-indent: -99999px;
 }
-
-.coming-soon .logo a:before {
-	content: url(../img/rethink.svg);
-	width: 0;
-	height: 0;
-	visibility: hidden;
-}
-.coming-soon .logo a:hover { background-image: url(../img/rethink.svg); }
 
 .coming-soon h2 {
     font-size: 46px;
